<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.SignIn.SignIn">


        <ImageView
            android:id="@+id/logo_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/text_sign_in"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="8sp"
            android:text="@string/sign_in"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_sign_in" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_sign_in_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/text_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_input"
                android:drawablePadding="5dp"
                android:hint="@string/your_email_adress"
                android:padding="15dp"
                android:textColor="@color/colorGray"
                android:textColorHighlight="@color/colorSecondary"
                android:textColorLink="@color/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_sign_in_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_sign_in_email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/input_layout_sign_in_email"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_sign_in_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_input"
                android:drawablePadding="5dp"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/colorGray"
                android:textColorHighlight="@color/colorSecondary"
                android:textColorLink="@color/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorGray"
            app:layout_constraintEnd_toEndOf="@+id/error_display_sign_in"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/error_display_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/error_display_sign_in" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sign_in_button"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forget_password" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/sign_up_button"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_have_account" />

        <TextView
            android:id="@+id/text_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/you_havent_account"
            android:textColor="@color/colorGray"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

        <TextView
            android:id="@+id/error_display_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_sign_in_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_layout_sign_in_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_sign_in_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
