<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".screen.ChooseSignIn.ChooseSignIn">

        <ImageView
            android:id="@+id/logo_choose_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="@+id/text_sign_in"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="8sp"
            android:text="@string/sign_in"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_choose_sign_up" />

        <Button
            android:id="@+id/btn_sign_in_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/facebook_login_button"
            android:drawableLeft="@drawable/ic_f_de_facebook"
            android:drawablePadding="20sp"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:padding="12sp"
            android:text="@string/sign_in_with_facebook"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_with_google"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in_with_google"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_with_google" />

        <Button
            android:id="@+id/btn_sign_in_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/email_login_button"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="20sp"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:padding="12sp"
            android:text="@string/sign_in_with_email"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_with_facebook"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in_with_facebook"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_with_facebook" />

        <Button
            android:id="@+id/btn_sign_in_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/google_login_button"
            android:drawableLeft="@drawable/ic__logo_google"
            android:drawablePadding="20sp"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:padding="12sp"
            android:paddingBottom="8sp"
            android:text="@string/sign_in_with_google"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/colorGray"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="@+id/text_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
